syntax = "proto3";

// defines common types shared across Gloo Edge component APIs
package rpc.edge.gloo.solo.io;

option go_package = "github.com/solo-io/solo-projects/projects/apiserver/pkg/api/rpc.edge.gloo/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

// ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create.
// This is a boiled-down version of Kubernetes ObjectMeta which can be found at:
// https://github.com/kubernetes/apimachinery/blob/master/pkg/apis/meta/v1/generated.proto
message ObjectMeta {

    // Name must be unique within a namespace. Is required when creating resources, although
    // some resources may allow a client to request the generation of an appropriate name
    // automatically. Name is primarily intended for creation idempotence and configuration
    // definition.
    // Cannot be updated.
    // More info: http://kubernetes.io/docs/user-guide/identifiers#names
    // +optional
    string name = 1;

    // Namespace defines the space within each name must be unique. An empty namespace is
    // equivalent to the "default" namespace, but "default" is the canonical representation.
    // Not all objects are required to be scoped to a namespace - the value of this field for
    // those objects will be empty.
    //
    // Must be a DNS_LABEL.
    // Cannot be updated.
    // More info: http://kubernetes.io/docs/user-guide/namespaces
    // +optional
    string namespace = 3;

    // UID is the unique in time and space value for this object. It is typically generated by
    // the server on successful creation of a resource and is not allowed to change on PUT
    // operations.
    //
    // Populated by the system.
    // Read-only.
    // More info: http://kubernetes.io/docs/user-guide/identifiers#uids
    // +optional
    string uid = 5;

    // An opaque value that represents the internal version of this object that can
    // be used by clients to determine when objects have changed. May be used for optimistic
    // concurrency, change detection, and the watch operation on a resource or set of resources.
    // Clients must treat these values as opaque and passed unmodified back to the server.
    // They may only be valid for a particular resource or set of resources.
    //
    // Populated by the system.
    // Read-only.
    // Value must be treated as opaque by clients and .
    // More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
    // +optional
    string resource_version = 6;

    // CreationTimestamp is a timestamp representing the server time when this object was
    // created. It is not guaranteed to be set in happens-before order across separate operations.
    // Clients may not set this value. It is represented in RFC3339 form and is in UTC.
    //
    // Populated by the system.
    // Read-only.
    // Null for lists.
    // More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
    // +optional
    Time creation_timestamp = 8;

    // Map of string keys and values that can be used to organize and categorize
    // (scope and select) objects. May match selectors of replication controllers
    // and services.
    // More info: http://kubernetes.io/docs/user-guide/labels
    // +optional
    map<string, string> labels = 11;

    // Annotations is an unstructured key value map stored with a resource that may be
    // set by external tools to store and retrieve arbitrary metadata. They are not
    // queryable and should be preserved when modifying objects.
    // More info: http://kubernetes.io/docs/user-guide/annotations
    // +optional
    map<string, string> annotations = 12;


    // The name of the cluster which the object belongs to.
    // This is used to distinguish resources with same name and namespace in different clusters.
    // This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request.
    // +optional
    string cluster_name = 13;

}

// Time is a wrapper around time.Time which supports correct
// marshaling to YAML and JSON.  Wrappers are provided for many
// of the factory methods that the time package offers.
//
// +protobuf.options.marshal=false
// +protobuf.as=Timestamp
message Time {
    // Represents seconds of UTC time since Unix epoch
    // 1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to
    // 9999-12-31T23:59:59Z inclusive.
    int64 seconds = 1;

    // Non-negative fractions of a second at nanosecond resolution. Negative
    // second values with fractions must still have non-negative nanos values
    // that count forward in time. Must be from 0 to 999,999,999
    // inclusive. This field may be limited in precision depending on context.
    int32 nanos = 2;
}

message ResourceYaml {
    string yaml = 1;
}

message Pagination {
    int32 limit = 1;
    int32 offset = 2;
}

message SortOptions {
    // Whether to sort descending (true) or ascending (false).
    // Default: Sorts ascending.
    bool descending = 1;

    // The property to sort by.
    // Default: Sorts by name.
    SortKey sort_key = 2;

    // The properties we can sort by.
    enum SortKey {
        NAME = 0;
        NAMESPACE = 1;
        STATUS = 2;
    }
}

message StatusFilter {
    // This matches up to the {{...}}Status.State field for each gloo resource.
    int32 state = 1;
}
